página "Nosotros" terminada
La página de la sección "nosotros" ha sido terminada, puede resultar en modificaciones para que se vea un poco mejor en móvil, pero la página base esta hecha.

--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -42,13 +42,89 @@
         </div>
       </nav>
 
-
-      <div class="container-fluid">
-        <!-- PAGE CONTENT -->
-
-
+      <div class="container-fluid overflow-hidden" style="padding: 0;">
+        <div class="row">
+          <div class="col-xl-12 col-lg-12 col-md-12 pr-0 pl-0">
+            <div class="overview">
+              <div style="max-height: 300px; overflow: hidden;">
+                <img src="../statics/img/construccion3.jpg" class="overviewImageDark" style="margin-top: -10%;" alt="Responsive image">
+              </div>
+              <div class="overviewTextCentered row">
+                <div class="col-12">
+                  <h2><b>Nuestra Empresa</b></h2>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row" style="height: auto; padding-top: 100px; padding-bottom: 50px;">
+          <div class="col-xl-12 col-lg-12 col-md-12 pr-0 pl-0">
+            <div class="overviewTextCentered row" style="text-align: center; margin: 0;">
+              <div class="d-none d-lg-block col-12" style="padding: 100px;">
+                  <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer in dolor arcu. Sed tempus tristique velit sed dictum. Aenean vestibulum tempus lorem, eget mattis dui aliquet ut. </h4>
+                </div>
+                <div class="d-lg-none col-12" style="font-weight: bold;">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer in dolor arcu. Sed tempus tristique velit sed dictum. Aenean vestibulum tempus lorem, eget mattis dui aliquet ut.</p>
+                </div>
+              </div>
+            </div>
+            
+            <div class="row" style="padding-top: 100px;">
+              <div class="col-lg-4 col-sm-12" style="text-align: center;">
+                <img src="../statics/icons/chart.svg" class=" mr-2 yellow-icon" width="135px">
+                <div class="d-none d-lg-block col-12" style="padding-left: 100px; padding-right: 100px; padding-top: 15px;">
+                  <p>Nuestros procesos aseguran la eficiencia y correcta integración de las necesidades de nuestros clientes, cumpliendo en cualquier requisito que se pueda necesitar.</p>
+                </div>
+                <div class="d-lg-none col-12" style="padding-bottom: 50px;">
+                  <small>Nuestros procesos aseguran la eficiencia y correcta integración de las necesidades de nuestros clientes, cumpliendo en cualquier requisito que se pueda necesitar.</small>
+                </div>
+              </div>
+              <div class="col-lg-4 col-sm-12" style="text-align: center;">
+                <img src="../statics/icons/currency-dollar.svg" class=" mr-2" width="135px">
+                <div class="d-none d-lg-block col-12" style="padding-left: 100px; padding-right: 100px; padding-top: 15px;">
+                  <p>Precios justos es lo que merecen nuestros clientes, por ende, siempre cobramos lo que es justo sin aumentar los precios de manera injusta.</p>
+                </div>
+                <div class="d-lg-none col-12" style="padding-bottom: 50px;">
+                  <small>Precios justos es lo que merecen nuestros clientes, por ende, siempre cobramos lo que es justo sin aumentar los precios de manera injusta.</small>
+                </div>
+              </div>
+              <div class="col-lg-4 col-sm-12" style="text-align: center;">
+                <img src="../statics/icons/mood-happy-outline.svg" class=" mr-2" width="135px">
+                <div class="d-none d-lg-block col-12" style="padding-left: 100px; padding-right: 100px; padding-top: 15px;">
+                  <p>Nuestra meta global es la satisfacción de cada uno de nuestros clientes, después de todo, nuestra empresa subsiste gracias a ellos.</p>
+                </div>
+                <div class="d-lg-none col-12" style="padding-bottom: 50px;">
+                  <small>Nuestra meta global es la satisfacción de cada uno de nuestros clientes, después de todo, nuestra empresa subsiste gracias a ellos.</small>
+                </div>
+              </div>
+            </div>
+          </div>  
+          <div class="row" style="background-color: #0131AC; height: auto; padding-bottom: 100px;">
+            <div class="col-lg-6 col-sm-12" style="text-align: center;">
+              <img src="../statics/icons/heart.svg" class=" mr-2" style="padding-top: 50px;" width="135px">
+              <div class="d-none d-lg-block col-12 yellow-color" style="padding-left: 100px; padding-right: 100px; padding-top: 15px;">
+                <h4>Nuestra misión</h4>
+                <h5 style="color: white;">Asegurarnos de ofrecer siempre la mayor calidad en nuestros productos para la satisfacción de todos nuestros clientes.</h5>
+              </div>
+              <div class="d-lg-none col-12 yellow-color">
+                <p>Nuestra misión</p>
+                <small style="color: white;">Asegurarnos de ofrecer siempre la mayor calidad en nuestros productos para la satisfacción de todos nuestros clientes.</small>
+              </div>
+            </div>
+            <div class="col-lg-6 col-sm-12" style="text-align: center;">
+              <img src="../statics/icons/globe.svg" class=" mr-2" style="padding-top: 50px;" width="135px">
+              <div class="d-none d-lg-block col-12 yellow-color" style="padding-left: 100px; padding-right: 100px; padding-top: 15px;">
+                <h4>Nuestra visión</h4>
+                <h5 style="color: white;">Ser reconocidos como la empresa de Herreria y Vidrieria Artistica mas conocida a nivel Local para posteriormente expandirnos y llevar nuestros logros a otras partes.</h5>
+              </div>
+              <div class="d-lg-none col-12 yellow-color">
+                <p>Nuestra misión</p>
+                <small style="color: white;">Ser reconocidos como la empresa de Herreria y Vidrieria Artistica mas conocida a nivel Local para posteriormente expandirnos y llevar nuestros logros a otras partes.</small>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-
     </main>
 
 
