--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -7,13 +7,14 @@
     <link rel="stylesheet" href="../css/bootstrap.css">
     <script type="text/javascript" src="../js/jquery-3.4.1.js"></script>
     <script type="text/javascript" src="../js/bootstrap.js"></script>
+    <script type="text/javascript" src="../js/eskju.jquery.scrollflow.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   </head>
   <body class="d-flex flex-column h-100">
     <main role="main" class="flex-shrink-0">
 
 
-      <nav class="navbar navbar-expand-md navbar-dark bar-blue">
+      <nav class="navbar navbar-expand-md navbar-dark bar-blue sticky-top">
         <a class="navbar-brand" href="#">LOGO</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
             <span class="navbar-toggler-icon"></span>
@@ -27,7 +28,7 @@
                 <a class="nav-link" href="inicio.html">Inicio <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="nosotros.html">Nosotros</a>
+                <a class="nav-link" href="#">Nosotros</a>
             </li>
             <li class="nav-item active">
                 <a class="nav-link" href="servicios.html">Servicios</a>
@@ -47,11 +48,11 @@
           <div class="col-xl-12 col-lg-12 col-md-12 pr-0 pl-0">
             <div class="overview">
               <div style="max-height: 300px; overflow: hidden;">
-                <img src="../statics/img/construccion3.jpg" class="overviewImageDark" style="margin-top: -10%;" alt="Responsive image">
+                <img src="../statics/img/construccion3.jpg" class="overviewImageDark img-fluid" alt="Responsive image">
               </div>
               <div class="overviewTextCentered row">
                 <div class="col-12">
-                  <h2><b>Nuestra Empresa</b></h2>
+                  <h2 class="scrollflow -pop"><b>Nuestra Empresa</b></h2>
                 </div>
               </div>
             </div>
@@ -59,67 +60,67 @@
         </div>
         <div class="row" style="height: auto; padding-top: 100px; padding-bottom: 50px;">
           <div class="col-xl-12 col-lg-12 col-md-12 pr-0 pl-0">
-            <div class="overviewTextCentered row" style="text-align: center; margin: 0;">
+            <div class="overviewTextCentered row text-center" style=" margin: 0;">
               <div class="d-none d-lg-block col-12" style="padding: 100px;">
-                  <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer in dolor arcu. Sed tempus tristique velit sed dictum. Aenean vestibulum tempus lorem, eget mattis dui aliquet ut. </h4>
+                  <h5 class="scrollflow -pop">Herrería y vidriería Artística fue fundada por el Sr. Juan Carlos Gómez en Ciudad Guzmán, Jalisco, en el año de 1995. Con más de 25 años de experiencia en herrería vidrio y aluminio en general. Consolidándose y desarrollando nuevas áreas de servicio. Como lo son la venta y la renta de Cimbra, Andamios, Maquinaria ligera, Andamios y Escaleras. </h5>
                 </div>
                 <div class="d-lg-none col-12" style="font-weight: bold;">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer in dolor arcu. Sed tempus tristique velit sed dictum. Aenean vestibulum tempus lorem, eget mattis dui aliquet ut.</p>
+                  <p class="scrollflow -pop"><small>Herrería y vidriería Artística fue fundada por el Sr. Juan Carlos Gómez en Ciudad Guzmán, Jalisco, en el año de 1995. Con más de 25 años de experiencia en herrería vidrio y aluminio en general. Consolidándose y desarrollando nuevas áreas de servicio. Como lo son la venta y la renta de Cimbra, Andamios, Maquinaria ligera, Andamios y Escaleras.</small></p>
                 </div>
               </div>
             </div>
-            
+
             <div class="row" style="padding-top: 100px;">
-              <div class="col-lg-4 col-sm-12" style="text-align: center;">
-                <img src="../statics/icons/chart.svg" class=" mr-2 yellow-icon" width="135px">
+              <div class="col-lg-4 col-sm-12 text-center">
+                <img src="../statics/icons/chart.svg" class="mr-2 yellow-icon scrollflow -slide-right" width="135px">
                 <div class="d-none d-lg-block col-12" style="padding-left: 100px; padding-right: 100px; padding-top: 15px;">
-                  <p>Nuestros procesos aseguran la eficiencia y correcta integración de las necesidades de nuestros clientes, cumpliendo en cualquier requisito que se pueda necesitar.</p>
+                  <p class="scrollflow -slide-top">Nuestros procesos aseguran la eficiencia y correcta integración de las necesidades de nuestros clientes, cumpliendo en cualquier requisito que se pueda necesitar.</p>
                 </div>
                 <div class="d-lg-none col-12" style="padding-bottom: 50px;">
-                  <small>Nuestros procesos aseguran la eficiencia y correcta integración de las necesidades de nuestros clientes, cumpliendo en cualquier requisito que se pueda necesitar.</small>
+                  <small class="scrollflow -pop">Nuestros procesos aseguran la eficiencia y correcta integración de las necesidades de nuestros clientes, cumpliendo en cualquier requisito que se pueda necesitar.</small>
                 </div>
               </div>
-              <div class="col-lg-4 col-sm-12" style="text-align: center;">
-                <img src="../statics/icons/currency-dollar.svg" class=" mr-2" width="135px">
+              <div class="col-lg-4 col-sm-12 text-center">
+                <img src="../statics/icons/currency-dollar.svg" class=" mr-2 scrollflow -slide-bottom" width="135px">
                 <div class="d-none d-lg-block col-12" style="padding-left: 100px; padding-right: 100px; padding-top: 15px;">
-                  <p>Precios justos es lo que merecen nuestros clientes, por ende, siempre cobramos lo que es justo sin aumentar los precios de manera injusta.</p>
+                  <p class="scrollflow -slide-top">Precios justos es lo que merecen nuestros clientes, por ende, siempre cobramos lo que es justo sin aumentar los precios de manera injusta.</p>
                 </div>
                 <div class="d-lg-none col-12" style="padding-bottom: 50px;">
                   <small>Precios justos es lo que merecen nuestros clientes, por ende, siempre cobramos lo que es justo sin aumentar los precios de manera injusta.</small>
                 </div>
               </div>
-              <div class="col-lg-4 col-sm-12" style="text-align: center;">
-                <img src="../statics/icons/mood-happy-outline.svg" class=" mr-2" width="135px">
+              <div class="col-lg-4 col-sm-12 text-center">
+                <img src="../statics/icons/mood-happy-outline.svg" class=" mr-2 scrollflow -slide-left" width="135px">
                 <div class="d-none d-lg-block col-12" style="padding-left: 100px; padding-right: 100px; padding-top: 15px;">
-                  <p>Nuestra meta global es la satisfacción de cada uno de nuestros clientes, después de todo, nuestra empresa subsiste gracias a ellos.</p>
+                  <p class="scrollflow -slide-top">Nuestra meta global es la satisfacción de cada uno de nuestros clientes, después de todo, nuestra empresa subsiste gracias a ellos.</p>
                 </div>
                 <div class="d-lg-none col-12" style="padding-bottom: 50px;">
                   <small>Nuestra meta global es la satisfacción de cada uno de nuestros clientes, después de todo, nuestra empresa subsiste gracias a ellos.</small>
                 </div>
               </div>
             </div>
-          </div>  
+          </div>
           <div class="row" style="background-color: #0131AC; height: auto; padding-bottom: 100px;">
-            <div class="col-lg-6 col-sm-12" style="text-align: center;">
-              <img src="../statics/icons/heart.svg" class=" mr-2" style="padding-top: 50px;" width="135px">
-              <div class="d-none d-lg-block col-12 yellow-color" style="padding-left: 100px; padding-right: 100px; padding-top: 15px;">
+            <div class="col-lg-6 col-sm-12 text-center">
+              <img src="../statics/icons/heart.svg" class=" mr-2 scrollflow -slide-bottom" style="padding-top: 50px;" width="135px">
+              <div class="d-none d-lg-block col-12 yellow-color scrollflow -slide-left" style="padding-left: 100px; padding-right: 100px; padding-top: 15px;">
                 <h4>Nuestra misión</h4>
-                <h5 style="color: white;">Asegurarnos de ofrecer siempre la mayor calidad en nuestros productos para la satisfacción de todos nuestros clientes.</h5>
+                <h5 class="text-light">Vender y rentar; cimbra metálica y de madera, andamios, maquinaria ligera para construcción, escaleras. Fabricar y diseñar todo tipo de herrería en general. Satisfaciendo las necesidades de nuestros clientes, con calidad y compromiso en nuestros trabajos,  satisfaciendo las necesidades de nuestros clientes.</h5>
               </div>
-              <div class="d-lg-none col-12 yellow-color">
+              <div class="d-lg-none col-12 yellow-color scrollflow -pop">
                 <p>Nuestra misión</p>
-                <small style="color: white;">Asegurarnos de ofrecer siempre la mayor calidad en nuestros productos para la satisfacción de todos nuestros clientes.</small>
+                <small class="text-light">Vender y rentar; cimbra metálica y de madera, andamios, maquinaria ligera para construcción, escaleras. Fabricar y diseñar todo tipo de herrería en general. Satisfaciendo las necesidades de nuestros clientes, con calidad y compromiso en nuestros trabajos,  satisfaciendo las necesidades de nuestros clientes.</small>
               </div>
             </div>
-            <div class="col-lg-6 col-sm-12" style="text-align: center;">
-              <img src="../statics/icons/globe.svg" class=" mr-2" style="padding-top: 50px;" width="135px">
-              <div class="d-none d-lg-block col-12 yellow-color" style="padding-left: 100px; padding-right: 100px; padding-top: 15px;">
+            <div class="col-lg-6 col-sm-12 text-center">
+              <img src="../statics/icons/globe.svg" class=" mr-2 scrollflow -slide-bottom" style="padding-top: 50px;" width="135px">
+              <div class="d-none d-lg-block col-12 yellow-color scrollflow -slide-right" style="padding-left: 100px; padding-right: 100px; padding-top: 15px;">
                 <h4>Nuestra visión</h4>
-                <h5 style="color: white;">Ser reconocidos como la empresa de Herreria y Vidrieria Artistica mas conocida a nivel Local para posteriormente expandirnos y llevar nuestros logros a otras partes.</h5>
+                <h5 class="text-light">Ser a corto plazo líderes en la venta y renta de nuestros productos para construcción, y en la fabricación de herrería, vidrio y aluminio en la región sur de Jalisco. </h5>
               </div>
-              <div class="d-lg-none col-12 yellow-color">
-                <p>Nuestra misión</p>
-                <small style="color: white;">Ser reconocidos como la empresa de Herreria y Vidrieria Artistica mas conocida a nivel Local para posteriormente expandirnos y llevar nuestros logros a otras partes.</small>
+              <div class="d-lg-none col-12 yellow-color scrollflow -pop">
+                <p>Nuestra visión</p>
+                <small class="text-light">Ser a corto plazo líderes en la venta y renta de nuestros productos para construcción, y en la fabricación de herrería, vidrio y aluminio en la región sur de Jalisco. </small>
               </div>
             </div>
           </div>
@@ -190,8 +191,12 @@
             </div>
 
             <div class="row justify-content-center mt-2 mb-4">
-              <img src="../statics/icons/facebook.svg" class="white-icon mr-2" width="50px">
-              <img src="../statics/icons/instagram.svg" class="white-icon ml-2" width="50px">
+              <a href="https://web.facebook.com/herreriayvidrieriaartistica/?_rdc=1&_rdr">
+                <img src="../statics/icons/facebook.svg" class="white-icon-hoverable mr-2" width="50px">
+              </a>
+              <a href="https://www.instagram.com/herreria_y_vidrieria_artistica/?igshid=1vqqyc2vq5obj">
+                <img src="../statics/icons/instagram.svg" class="white-icon-hoverable ml-2" width="50px">
+              </a>
             </div>
           </div>
 
@@ -199,5 +204,16 @@
         </div>
       </div>
     </footer>
+    <div class="floating-icons justify-content-center">
+      <div class="bg-warning icon-tooltip border border-danger">
+        <div class="text-center" role="alert">
+          <p class="pt-2"><b>¡Envíe un WhatsApp!</b></p>
+
+        </div>
+      </div>
+      <a href="https://wa.me/523414363155">
+        <img src="../statics/icons/whatsapp.svg" class="animated-icon" alt="whatsapp">
+      </a>
+    </div>
   </body>
 </html>
