Página "Servicios" terminada
La sección de la página "servicios" ha sido terminada y lista para revisión, puede someterse a cambios para una mejor vista en móvil.

--- a/html/servicios.html
+++ b/html/servicios.html
@@ -46,10 +46,171 @@
 
       <div class="container-fluid">
         <!-- PAGE CONTENT -->
+        <div class="row">
+          <div class="col-lg-12 col-sm-12" style="height: 100px; background-color: #0131AC;">
+            <div class="overviewTextCentered text-center">
+              <h2 class="scrollflow -pop" style="color: white;"><b>Servicios</b></h2>
+            </div>
+          </div>
+        </div>
+        
+        <div class="row">
+          <div class="col-lg-12 col-sm-12 text-center" style="height: auto; padding-top: 20px;">
+            <h5 class="scrollflow -pop">Para asegurar que cumpliremos con lo que pide, nuestra empresa ofrece servicios de:</h5>
+          </div>
+        </div>
 
+        <div class="row text-center" style="padding-top: 50px;">
+          <div class="col-lg-12 col-md-12 col-6" style="padding-bottom: 40px;">
+            <div class="row">
+              <div class="col-lg-4 col-md-4 col-sm-6 col-12">
+                <div class="d-none d-lg-block">
+                  <h4 class="scrollflow -pop" style="font-weight: bold;">● TECHOS</h4>
+                </div>
+                <div class="d-lg-none col-12">
+                  <h5 class="scrollflow -pop" style="font-weight: bold;">TECHOS</h5>
+                </div>
+              </div>
+              <div class="col-lg-4 col-md-4 col-sm-6 col-12">
+                <div class="d-none d-lg-block">
+                  <h4 class="scrollflow -pop" style="font-weight: bold;">● ESTRUCTURAS</h4>
+                </div>
+                <div class="d-lg-none col-12">
+                  <h5 class="scrollflow -pop" style="font-weight: bold;">ESTRUCTURAS</h5>
+                </div>
+              </div>
+              <div class="col-lg-4 col-md-4 col-sm-6 col-12">
+                <div class="d-none d-lg-block">
+                  <h4 class="scrollflow -pop" style="font-weight: bold;">● VIGUERIA</h4>
+                </div>
+                <div class="d-lg-none col-12">
+                  <h5 class="scrollflow -pop" style="font-weight: bold;">VIGUERIA</h5>
+                </div>
+              </div>
+            </div>
+          </div>
 
+          <div class="col-lg-12 col-md-12 col-6">
+            <div class="row">
+              <div class="col-lg-4 col-md-4 col-sm-6 col-12">
+                <div class="d-none d-lg-block">
+                  <h4 class="scrollflow -pop" style="font-weight: bold;">● VIDRIO</h4>
+                </div>
+                <div class="d-lg-none col-12">
+                  <h5 class="scrollflow -pop" style="font-weight: bold;">VIDRIO</h5>
+                </div>
+              </div>
+              <div class="col-lg-4 col-md-4 col-sm-6 col-12">
+                <div class="d-none d-lg-block">
+                  <h4 class="scrollflow -pop" style="font-weight: bold;">● HERRERIA EN GENERAL</h4>
+                </div>
+                <div class="d-lg-none col-12">
+                  <h5 class="scrollflow -pop" style="font-weight: bold;">HERRERIA</h5>
+                </div>
+              </div>
+              <div class="col-lg-4 col-md-4 col-sm-6 col-12">
+                <div class="d-none d-lg-block">
+                  <h4 class="scrollflow -pop" style="font-weight: bold;">● ALUMINIO</h4>
+                </div>
+                <div class="d-lg-none col-12">
+                  <h5 class="scrollflow -pop" style="font-weight: bold;">ALUMINIO</h5>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-12 col-sm-12 text-center" style="height: auto; padding-top: 50px; padding-bottom: 10px;">
+            <p>Además, ofrecemos servicio de Venta y Renta de los siguientes materiales</p>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-xl-12 col-lg-12 col-md-12 pr-0 pl-0">
+            <div class="overview">
+              <div style="max-height: 400px; overflow: hidden;">
+                <img src="../statics/img/cimbra3.jpg" class="overviewImageDark" style="position: relative; width: 100%;" alt="Responsive image">
+              </div>
+              <div class="overviewTextCentered row">
+                <div class="col-12">
+                  <h2 class="scrollflow -pop"><b>CIMBRA</b></h2>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-4 col-md-4 col-12 pr-0 pl-0 bar-blue">
+            <div class="overview">
+              <div style="max-height: 280px; overflow: hidden;">
+                <img src="../statics/img/andamio.jpg" class="overviewImageDark" style="position: relative; width: 100%;" alt="Responsive image">
+              </div>
+              <div class="overviewTextCentered row">
+                <div class="col-12">
+                  <h2 class="scrollflow -pop">ANDAMIOS Y ESCALERAS</h2>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-4 col-12 pr-0 pl-0 bar-blue">
+            <div class="overview">
+              <div style="max-height: 280px; overflow: hidden;">
+                <img src="../statics/img/construccion2.jpg" class="overviewImageDark" style="position: relative; width: 100%;" alt="Responsive image">
+              </div>
+              <div class="overviewTextCentered row">
+                <div class="col-12">
+                  <h2 class="scrollflow -pop">MAQUINARIA LIGERA</h2>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-4 col-12 pr-0 pl-0 bar-blue">
+            <div class="overview">
+              <div style="max-height: 280px; overflow: hidden;">
+                <img src="../statics/img/plank.jpg" class="overviewImageDark" style="position: relative; width: 100%;" alt="Responsive image">
+              </div>
+              <div class="overviewTextCentered row">
+                <div class="col-12">
+                  <h2 class="scrollflow -pop m-0">POR PIEZA</h2>
+                  <p class="m-0">Postes metalicos</p>
+                  <p class="m-0">Charolas metalicas</p>
+                  <p class="m-0">tablas</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-12">
+            <div class="row">
+              <div class="col-lg-12 col-sm-12 text-center" style="height: auto; padding-top: 50px; padding-bottom: 10px;">
+                <p class="scrollflow -slide-top" style="font-size: larger;">¿Interesado en alguno de nuestros <span class="red-color font-weight-bold">servicios</span> o <span class="red-color font-weight-bold">materiales</span>?</p>
+              </div>
+              <div class="col-lg-12 col-sm-12 text-center" style="height: auto; padding-bottom: 10px;">
+                <a href="contacto.html" class="btn btn-warning scrollflow -pop" role="button" style="font-size: large;">Visita nuestra página de <span class="font-weight-bold">contacto</span></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-12">
+            <div class="row">
+              <div class="col-lg-12 col-sm-12 text-center" style="height: auto; padding-top: 10px; padding-bottom: 10px;">
+                <p class="scrollflow -slide-top" style="font-size: larger;">¿Interesado en ver un vistazo de nuestros <span class="red-color font-weight-bold">productos</span>?</p>
+              </div>
+              <div class="col-lg-12 col-sm-12 text-center" style="height: auto; padding-bottom: 10px;">
+                <a href="galeria.html" class="btn btn-warning scrollflow -pop" role="button" style="font-size: large;">Visita nuestra página de <span class="font-weight-bold">galería</span></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-12">
+            <div class="col-lg-12 col-sm-12 text-center font-weight-bold" style="height: auto; padding-top: 30px; padding-bottom: 30px;">
+              <p class="scrollflow -pop" style="font-size: larger;">Y recuerda que puedes contactarnos o visitarnos para pedir mas información acerca de algún servicio o material en particular sin costo.</p>
+            </div>
+          </div>
+        </div>
       </div>
-
     </main>
 
 
